--- a/src/app/emailmanagement/emailmanagement.component.html
+++ b/src/app/emailmanagement/emailmanagement.component.html
@@ -27,7 +27,7 @@
     </div>
 </div>
 
-<mat-vertical-stepper #stepper *ngIf="!chooseComp && _stepper">
+<!-- <mat-vertical-stepper #stepper *ngIf="!chooseComp && _stepper">
     <mat-step [stepControl]="emailSenderGroup">
         <form dir="rtl" [formGroup]="emailSenderGroup" autocomplete="off">
             <ng-template matStepLabel>חלק פנייה בסיסי</ng-template>
@@ -37,7 +37,7 @@
                         <div class="col-12 text-right">
                             <label>תאריך פנייה</label>
                             <mat-form-field appearance="fill">
-                                <input matInput formControlName="EmailDateTime" [matDatepicker]="picker3">
+                                <input matInput formControlName="EmailDateTime" (focus)="picker3.open()" [matDatepicker]="picker3">
                                 <mat-datepicker-toggle matSuffix [for]="picker3">
                                 </mat-datepicker-toggle>
                                 <mat-datepicker #picker3></mat-datepicker>
@@ -124,7 +124,7 @@
                 </div>
             </ol>
             <div>
-                <button mat-button matStepperNext>הבא</button>
+                <button mat-button class="nextBtn" matStepperNext>הבא</button>
             </div>
         </form>
     </mat-step>
@@ -139,9 +139,9 @@
             </button>
         </div>
     </mat-step>
-</mat-vertical-stepper>
+</mat-vertical-stepper> -->
 
-<form dir="rtl" [formGroup]="manageComplaintForm" autocomplete="off" *ngIf="!chooseComp && _ifUpdate && !_stepper">
+<form dir="rtl" [formGroup]="manageComplaintForm" autocomplete="off" *ngIf="!chooseComp">
 
     <mat-card class="full-width text-center">
         <div class="row">
@@ -188,7 +188,7 @@
         <mat-vertical-stepper>
             <mat-step [stepControl]="emailSenderGroup">
                 <form dir="rtl" [formGroup]="emailSenderGroup" autocomplete="off">
-                    <ng-template matStepLabel>עדכון פנייה בסיסית</ng-template>
+                    <ng-template matStepLabel>עדכון חלק פנייה בסיסית</ng-template>
                     <ol class="list-style">
                         <div class="full-width row">
                             <li class="border-me col-6">
@@ -259,12 +259,12 @@
 
                     </ol>
                     <div>
-                        <button mat-button matStepperNext>הבא</button>
+                        <button mat-button class="nextBtn" matStepperNext>הבא</button>
                     </div>
                 </form>
             </mat-step>
             <mat-step>
-                <ng-template matStepLabel>עדכון פנייה נוכחית</ng-template>
+                <ng-template matStepLabel>עדכון חלק פנייה מורחב</ng-template>
                 <ol class="list-style">
                     <div class="full-width row">
                         <li class="border-me col-6">
@@ -354,8 +354,8 @@
                                     [matAutocomplete]="auto2">
                                 <mat-autocomplete #auto2="matAutocomplete">
                                     <mat-option *ngFor="let dept of filteredOptions2 | async"
-                                        [value]="dept.Depart_Name">
-                                        {{dept.Depart_Name}}
+                                        [value]="dept.value">
+                                        {{dept.viewValue}}
                                     </mat-option>
                                 </mat-autocomplete>
                             </mat-form-field>
@@ -418,7 +418,7 @@
                     </div>
                 </ol>
                 <div>
-                    <button mat-button matStepperNext>הבא</button>
+                    <button mat-button class="nextBtn" matStepperNext>הבא</button>
                 </div>
             </mat-step>
             <mat-step>
