--- a/src/app/status-complaint/status-complaint.component.html
+++ b/src/app/status-complaint/status-complaint.component.html
@@ -16,31 +16,33 @@
     <mat-card class="full-width text-center pb-0 mb-3">
         <div class="row">
             <div class="col-6">
-            <label style="font-size: 20px;">{{ComplaintSubject}}</label>
+                <label style="font-size: 20px;">{{ComplaintSubject}}</label>
+            </div>
+            <div class="col-5" *ngIf="UserName == 'matias'">
+                <form class="example-form">
+                    <mat-form-field class="example-full-width">
+                        <mat-label>קישור אחראי לפנייה</mat-label>
+                        <input type="text" aria-label="manager" matInput
+                            [formControl]="myControl" [matAutocomplete]="auto">
+                        <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+                            <mat-option *ngFor="let option of filteredOptions | async"
+                                [value]="option">
+                                {{option.name}}
+                            </mat-option>
+                        </mat-autocomplete>
+                    </mat-form-field>
+                </form>
+            </div>
+            <div class="col-1" *ngIf="UserName == 'matias'">
+                <button mat-raised-button class="btn btn-primary btn-raised float-left"
+                    (click)="shareComplaintWithOthers()" matTooltip="קישור מנהל לפנייה">
+                    <span class="material-icons">
+                        reply
+                    </span>
+                </button>
+            </div>
         </div>
-        <div class="col-6">
-            <button mat-raised-button class="btn btn-primary btn-raised float-left" (click)="shareComplaintWithOthers()"
-                matTooltip="קישור מנהל לפנייה">
-                <span class="material-icons">
-                    reply
-                </span>
-            </button>
-            <form class="example-form">
-                <mat-form-field class="example-full-width">
-                    <mat-label>קישור אחראי לפנייה</mat-label>
-                    <input type="text" placeholder="התחל הקלדה .." aria-label="manager" matInput
-                        [formControl]="myControl" [matAutocomplete]="auto">
-                    <mat-autocomplete #auto="matAutocomplete">
-                        <mat-option *ngFor="let option of filteredOptions | async"
-                            value="{{option.firstname}} {{option.lastname}}">
-                            {{option.firstname}} {{option.lastname}}
-                        </mat-option>
-                    </mat-autocomplete>
-                </mat-form-field>
-            </form>
-        </div>
-        </div>
-        
+
     </mat-card>
     <div class="full-width" *ngFor="let message of messagesArray">
         <mat-card class="message-card full-width" *ngIf="message.UserName != UserName">
