--- a/src/app/emailmanagement/emailmanagement.component.html
+++ b/src/app/emailmanagement/emailmanagement.component.html
@@ -197,7 +197,7 @@
                                         <label>שם הפונה</label>
                                     </div>
                                     <mat-form-field class="example-full-width">
-                                        <input type="text" matInput formControlName="CompName">
+                                        <input type="text" matInput formControlName="CompName" required>
                                     </mat-form-field>
                                 </div>
                             </li>
@@ -206,7 +206,7 @@
                                     <label>מספר טלפון הפונה</label>
                                 </div>
                                 <mat-form-field class="example-full-width">
-                                    <input type="text" matInput formControlName="CompPhone">
+                                    <input type="text" matInput formControlName="CompPhone" required>
                                 </mat-form-field>
                             </li>
                         </div>
@@ -220,7 +220,7 @@
                                     <input type="text" matInput formControlName="CompEmail">
                                 </mat-form-field>
                             </li>
-                            <li class="border-me col-6">
+                            <!-- <li class="border-me col-6">
                                 <div class="col-12 text-right">
                                     <label>מקור פניה</label>
                                 </div>
@@ -231,10 +231,7 @@
                                         </mat-option>
                                     </mat-select>
                                 </mat-form-field>
-                            </li>
-                        </div>
-                        <div class="full-width row">
-
+                            </li> -->
                             <li class="border-me col-6">
                                 <div class="col-12 text-right">
                                     <label>נושא הפנייה</label>
@@ -247,7 +244,11 @@
                                     </mat-select>
                                 </mat-form-field>
                             </li>
-                            <li class="border-me col-6">
+                        </div>
+                        <div class="full-width row">
+
+                            
+                            <li class="border-me col-12">
                                 <div class="col-12 text-right">
                                     <label>תאור האירוע</label>
                                 </div>
@@ -282,7 +283,7 @@
                             <div class="col-12 text-right">
                                 <label>סוג פניה</label>
                                 <mat-form-field class="full-width">
-                                    <mat-select formControlName="Comp_Type" ng-model="myVar">
+                                    <mat-select formControlName="Comp_Type" ng-model="myVar" required>
                                         <mat-option *ngFor="let type of compTypeList" [value]="type.value">
                                             {{type.viewValue}}
                                         </mat-option>
@@ -324,7 +325,7 @@
                         </li>
                         <li class="border-me col-6">
                             <div class="col-12 text-right">
-                                <label>פנייה במסגרת</label>
+                                <label>סוג ביקור</label>
                             </div>
                             <mat-radio-group class="example-radio-group mt-3" formControlName="Ambolatory">
                                 <div class="d-block" *ngFor="let ambolatory of compAmbolatory">
@@ -351,7 +352,7 @@
                             <mat-form-field appearance="fill">
                                 <mat-label>מחלקה</mat-label>
                                 <input type="text" aria-label="department" matInput [formControl]="departmentfilter"
-                                    [matAutocomplete]="auto2">
+                                    [matAutocomplete]="auto2" required>
                                 <mat-autocomplete #auto2="matAutocomplete">
                                     <mat-option *ngFor="let dept of filteredOptions2 | async"
                                         [value]="dept.value">
