--- a/src/app/emailmanagement/emailmanagement.component.html
+++ b/src/app/emailmanagement/emailmanagement.component.html
@@ -148,7 +148,7 @@
             <div class="col-6">
                 <label style="font-size: 40px;">{{complaintName}}</label>
             </div>
-            <div class="col-6" style="background-color: burlywood;">
+            <div class="col-6 highlightBox">
                 <div class="text-center">
                     <label>קביעת SLA</label>
                 </div>
