--- a/src/app/emailmanagement/emailmanagement.component.html
+++ b/src/app/emailmanagement/emailmanagement.component.html
@@ -153,7 +153,7 @@
                     <label>קביעת SLA</label>
                 </div>
                 <mat-form-field appearance="fill">
-                    <input matInput formControlName="DeadLine" [matDatepicker]="pickers">
+                    <input matInput formControlName="DeadLine" [matDatepicker]="pickers" (focus)="pickers.open()">
                     <mat-datepicker-toggle matSuffix [for]="pickers">
                     </mat-datepicker-toggle>
                     <mat-datepicker #pickers></mat-datepicker>
@@ -272,7 +272,7 @@
                             <div class="col-12 text-right">
                                 <label>תאריך פניה</label>
                                 <mat-form-field appearance="fill">
-                                    <input matInput formControlName="Comp_Date" [matDatepicker]="picker">
+                                    <input matInput formControlName="Comp_Date" [matDatepicker]="picker" (focus)="picker.open()">
                                     <mat-datepicker-toggle matSuffix [for]="picker">
                                     </mat-datepicker-toggle>
                                     <mat-datepicker #picker></mat-datepicker>
@@ -380,7 +380,7 @@
                                 <label>תאריך סגירת הפניה</label>
                             </div>
                             <mat-form-field appearance="fill">
-                                <input matInput formControlName="Comp_Closing_Date" [matDatepicker]="picker2">
+                                <input matInput formControlName="Comp_Closing_Date" [matDatepicker]="picker2" (focus)="picker2.open()">
                                 <mat-datepicker-toggle matSuffix [for]="picker2">
                                 </mat-datepicker-toggle>
                                 <mat-datepicker #picker2></mat-datepicker>
