--- a/src/app/casenumbers/casenumbers.component.html
+++ b/src/app/casenumbers/casenumbers.component.html
@@ -1,6 +1,13 @@
-<div id="page-toshow">
-    <h1 class="text-center">מקרים</h1>
-    <div class="container-fluid">
+<div id="page-toshow111">
+    <h1 class="text-center">
+        <b><span>מזהה קרטון: </span>{{CartoonUNID}}</b>
+        
+    </h1>
+    <h1 class="text-center">    
+        <b><span>סה"כ מקרים: </span>{{TotalCases}}</b>
+    </h1>
+    <br>
+    <div class="container-fluid hide-on-print">
         <div class="row">
             <div class="col">
                 <div dir="rtl" class="card w-85-p">
@@ -33,7 +40,7 @@
     </div>
     <br />
     <hr />
-    <div class="container-fluid pb-60">
+    <div class="container-fluid pb-60  show-on-print">
         <div class="row">
             <div dir="rtl" class="col">
                 <div class="table-responsive">
@@ -47,12 +54,28 @@
                             [dataSource]="dataSource"
                             id="formTable1"
                         >
+                            <ng-container matColumnDef="HospitalDate">
+                                <th mat-header-cell *matHeaderCellDef>
+                                   תאריך מקרה
+                                </th>
+                                <td mat-cell *matCellDef="let element">
+                                    {{ element.HospitalDate }}
+                                </td>
+                            </ng-container>
                             <ng-container matColumnDef="CaseNumber">
                                 <th mat-header-cell *matHeaderCellDef>
                                     מס' מקרה
                                 </th>
                                 <td mat-cell *matCellDef="let element">
                                     {{ element.CaseNumber }}
+                                </td>
+                            </ng-container>
+                            <ng-container matColumnDef="PatientNumber">
+                                <th mat-header-cell *matHeaderCellDef>
+                                    מס' מטופל
+                                </th>
+                                <td mat-cell *matCellDef="let element">
+                                    {{ element.PatientNumber }}
                                 </td>
                             </ng-container>
                             <ng-container matColumnDef="PatientID">
@@ -78,7 +101,15 @@
                                 <td mat-cell *matCellDef="let element">
                                     {{ element.LastName }}
                                 </td>
-                            </ng-container>                          
+                            </ng-container>   
+                            <ng-container matColumnDef="DOB">
+                                <th mat-header-cell *matHeaderCellDef>
+                                    תאריך לידה
+                                </th>
+                                <td mat-cell *matCellDef="let element">
+                                    {{ element.DOB }}
+                                </td>
+                            </ng-container>                        
                             <ng-container matColumnDef="Click">
                                 <th
                                     mat-header-cell
